--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Android";
-  src: url("/aula01/desafios/desafio010/font/idroid.otf") format("opentype");
+  src: url("../font/idroid.otf") format("opentype");
   font-weight: normal;
 }
 
